[package]
name = "logwatcher2"
version = "0.2.1"
authors = ["Aravinda VK <mail@aravindavk.in>", "sn99 <siddharthn.099@gmail.com>"]
edition = "2021"

description = "A lib to watch log files for new Changes, just like tail -f"

documentation = "https://github.com/SubconsciousCompute/logwatcher2"
homepage = "https://github.com/SubconsciousCompute/logwatcher2"
repository = "https://github.com/SubconsciousCompute/logwatcher2"

readme = "README.md"
keywords = ["log", "watcher", "tail"]
license = "MIT/Apache-2.0"

[lib]
name = "logwatcher"
crate-type = ["rlib"]

[dependencies]
